# mcp-tui

./: README.md  mcp.json.example  pyproject.toml  requirements.txt
mcp_tui/: app.py  app.tcss
